--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "^1.0.0",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "node-random-number": "^0.1.1"
   }
 }
